431_20190725 15:20 sort機能日付版動くと思います

--- a/src/main/resources/META-INF/jpa-named-queries.properties
+++ b/src/main/resources/META-INF/jpa-named-queries.properties
@@ -1,1 +1,3 @@
 Result2.findAllOrderByName=select e from Result2 e order by e.id
+Result2.findAllOrderByDateASC=select e from Result2 e order by e.date ASC
+Result2.findAllOrderByDateDESC=select e from Result2 e order by e.date DESC
