--- a/src/main/resources/META-INF/jpa-named-queries.properties
+++ b/src/main/resources/META-INF/jpa-named-queries.properties
@@ -1,3 +1,7 @@
 Result2.findAllOrderByName=select e from Result2 e order by e.id
 Result2.findAllOrderByDateASC=select e from Result2 e order by e.date ASC
 Result2.findAllOrderByDateDESC=select e from Result2 e order by e.date DESC
+Result2.findAllOrderByCostASC=select e from Result2 e order by e.cost ASC
+Result2.findAllOrderByCostDESC=select e from Result2 e order by e.cost DESC
+Result2.findAllOrderByAgeASC=select e from Result2 e order by e.age ASC
+Result2.findAllOrderByAgeDESC=select e from Result2 e order by e.age DESC
