--- a/src/main/resources/META-INF/jpa-named-queries.properties
+++ b/src/main/resources/META-INF/jpa-named-queries.properties
@@ -1,4 +1,4 @@
-Result2.findAllOrderByName=select e from Result2 e order by e.id
+Result2.findAllOrderByDate=select e from Result2 e order by e.date desc
 Result2.findAllOrderByDateASC=select e from Result2 e order by e.date ASC
 Result2.findAllOrderByDateDESC=select e from Result2 e order by e.date DESC
 Result2.findAllOrderByCostASC=select e from Result2 e order by e.cost ASC
