2019/08/01 ほとんど変更点なし。照屋

--- a/src/main/resources/META-INF/jpa-named-queries.properties
+++ b/src/main/resources/META-INF/jpa-named-queries.properties
@@ -1,7 +1,13 @@
 Result2.findAllOrderByName=select e from Result2 e order by e.id
-Result2.findAllOrderByDateASC=select e from Result2 e order by e.date ASC
-Result2.findAllOrderByDateDESC=select e from Result2 e order by e.date DESC
-Result2.findAllOrderByCostASC=select e from Result2 e order by e.cost ASC
-Result2.findAllOrderByCostDESC=select e from Result2 e order by e.cost DESC
-Result2.findAllOrderByAgeASC=select e from Result2 e order by e.age ASC
-Result2.findAllOrderByAgeDESC=select e from Result2 e order by e.age DESC
+Result2.findAllOrderByDateASC=SELECT * FROM result2disp WHERE EMPLOYMENT LIKE + sWord + OR SENDER LIKE + sWord + OR TEXT LIKE + sWord +  OR CLOSEST_STATION LIKE + sWord
+				+ ORDER BY DATE ASC
+Result2.findAllOrderByDateDESC="SELECT * FROM result2disp WHERE EMPLOYMENT LIKE" + sWord + "OR SENDER LIKE" + sWord + "OR TEXT LIKE" + sWord + " OR CLOSEST_STATION LIKE" + sWord
+				+ ORDER BY DATE DESC"
+Result2.findAllOrderByCostASC=SELECT * FROM result2disp WHERE EMPLOYMENT LIKE + sWord + OR SENDER LIKE + sWord + OR TEXT LIKE + sWord +  OR CLOSEST_STATION LIKE + sWord
+				+ ORDER BY LPAD(COST,10,0)ASC
+Result2.findAllOrderByCostDESC=SELECT * FROM result2disp WHERE EMPLOYMENT LIKE + sWord + "OR SENDER LIKE + sWord + OR TEXT LIKE + sWord +  OR CLOSEST_STATION LIKE + sWord
+				+ ORDER BY LPAD(COST,10,0)DESC
+Result2.findAllOrderByAgeASC=SELECT * FROM result2disp WHERE EMPLOYMENT LIKE + sWord + OR SENDER LIKE + sWord + OR TEXT LIKE + sWord +  OR CLOSEST_STATION LIKE + sWord
+				+ ORDER BY AGE ASC
+Result2.findAllOrderByAgeDESC=SELECT * FROM result2disp WHERE EMPLOYMENT LIKE" + sWord + "OR SENDER LIKE" + sWord + "OR TEXT LIKE" + sWord + " OR CLOSEST_STATION LIKE" + sWord
+				+" ORDER BY AGE DESC
