--- a/src/main/resources/META-INF/jpa-named-queries.properties
+++ b/src/main/resources/META-INF/jpa-named-queries.properties
@@ -1,5 +1,5 @@
 Result2.findAllOrderByDate=select e from Result2 e order by e.date desc
-Result2.findAllOrderByDateASC=select e from Result2 e order by e.date ASC
+Result2.findAllSortOrderByDateAsc=select e from Result2 e where employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word% order by date asc
 Result2.findAllOrderByDateDESC=select e from Result2 e order by e.date DESC
 Result2.findAllOrderByCostASC=select e from Result2 e order by e.cost ASC
 Result2.findAllOrderByCostDESC=select e from Result2 e order by e.cost DESC
