--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/sns?serverTimezone=JST
 spring.datasource.username=root
 spring.datasource.password=root
+app.recordperpage=10
+app.paginglength=5
+# SQLログ出力
+logging.level.org.hibernate.SQL=debug
+# バインドパラメータ出力
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+logging.level.org.hibernate.type.EnumType=trace
