パピコ欲しい

--- a/src/main/resources/META-INF/jpa-named-queries.properties
+++ b/src/main/resources/META-INF/jpa-named-queries.properties
@@ -5,6 +5,5 @@ Result2.findAllOrderByCostASC=select e from Result2 e order by e.cost ASC
 Result2.findAllOrderByCostDESC=select e from Result2 e order by e.cost DESC
 Result2.findAllOrderByAgeASC=select e from Result2 e order by e.age ASC
 Result2.findAllOrderByAgeDESC=select e from Result2 e order by e.age DESC
-Result2.countAll=SELECT COUNT(e) FROM Result2 e
 Result2.search=SELECT (e) FROM Result2 e WHERE EMPLOYMENT LIKE %:sWord% OR SENDER LIKE %:sWord% OR TEXT LIKE %:sWord% OR CLOSEST_STATION LIKE %:sWord%
-Result2.count2=SELECT COUNT(e) FROM Result2 e WHERE EMPLOYMENT LIKE %:sWord% OR SENDER LIKE %:sWord% OR TEXT LIKE %:sWord% OR CLOSEST_STATION LIKE %:sWord%
+Result2.countAll=SELECT COUNT(e) FROM Result2 e WHERE EMPLOYMENT LIKE %:sWord% OR SENDER LIKE %:sWord% OR TEXT LIKE %:sWord% OR CLOSEST_STATION LIKE %:sWord%
