--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.datasource.username=root
 spring.datasource.password=root
 app.recordperpage=10
 app.paginglength=5
+app.columnsize=10
 # SQLログ出力
 logging.level.org.hibernate.SQL=debug
 # バインドパラメータ出力
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 logging.level.org.hibernate.type.EnumType=trace
-
