--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ logging.level.org.hibernate.SQL=debug
 # バインドパラメータ出力
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 logging.level.org.hibernate.type.EnumType=trace
-
+spring.thymeleaf.cache=false
