見出し取得処理を変更

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 app.recordperpage=10
 app.paginglength=5
-app.columnsize=10
+app.columns=date,nationality,employment,commercial_distribution,cost,age,closest_station,subject,text,sender
 # SQLログ出力
 logging.level.org.hibernate.SQL=debug
 # バインドパラメータ出力
