見出しの日本語化

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=root
 app.recordperpage=10
 app.paginglength=5
-app.columns=date,nationality,employment,commercial_distribution,cost,age,closest_station,subject,text,sender
-# SQLログ出力
-logging.level.org.hibernate.SQL=debug
-# バインドパラメータ出力
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
-logging.level.org.hibernate.type.EnumType=trace
+app.columns=\u65E5\u6642, \u56FD, \u96C7, \u5546, \u5358\u91D1, \u5E74\u9F62, \u6700\u5BC4\u99C5, \u4EF6\u540D, \u9001\u4FE1\u8005
