--- a/src/main/resources/META-INF/jpa-named-queries.properties
+++ b/src/main/resources/META-INF/jpa-named-queries.properties
@@ -1,4 +1,4 @@
-Result2.findAllOrderByDate=select e from Result2 e order by e.date desc
+Result2.findAllOrderByDate=select e from Result2 e order by e.date asc
 Result2.findAllSortOrderByDateAsc=select e from Result2 e where employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word% order by date asc
 Result2.findAllOrderByDateASC=select e from Result2 e where employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word% order by date asc
 Result2.findAllOrderByDateDESC=select e from Result2 e where employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word% order by date desc
