人材情報と案件情報の追加 by高野

--- a/src/main/resources/META-INF/jpa-named-queries.properties
+++ b/src/main/resources/META-INF/jpa-named-queries.properties
@@ -1,10 +1,10 @@
-Result2.findAllOrderByDate=select e from Result2 e order by e.date asc
-Result2.findAllSortOrderByDateAsc=select e from Result2 e where employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word% order by date asc
-Result2.findAllOrderByDateASC=select e from Result2 e where employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word% order by date asc
-Result2.findAllOrderByDateDESC=select e from Result2 e where employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word% order by date desc
-Result2.findAllOrderByCostASC=select e from Result2 e where employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word% order by cost asc
-Result2.findAllOrderByCostDESC=select e from Result2 e where employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word% order by cost desc
-Result2.findAllOrderByAgeASC=select e from Result2 e where employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word% order by age asc
-Result2.findAllOrderByAgeDESC=select e from Result2 e where employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word% order by age desc
-Result2.search=SELECT (e) FROM Result2 e WHERE EMPLOYMENT LIKE %:sWord% OR SENDER LIKE %:sWord% OR TEXT LIKE %:sWord% OR CLOSEST_STATION LIKE %:sWord%
-Result2.countAll=SELECT COUNT(e) FROM Result2 e WHERE EMPLOYMENT LIKE %:sWord% OR SENDER LIKE %:sWord% OR TEXT LIKE %:sWord% OR CLOSEST_STATION LIKE %:sWord%
+Result2.findAllOrderByDate=select e from Result2 e where human_resource_or_work=:searchKubun order by e.date asc
+Result2.findAllSortOrderByDateAsc=select e from Result2 e where (employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word%) and human_resource_or_work=:searchKubun order by date asc
+Result2.findAllOrderByDateASC=select e from Result2 e where (employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word%) and human_resource_or_work=:searchKubun order by date asc
+Result2.findAllOrderByDateDESC=select e from Result2 e where (employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word%) and human_resource_or_work=:searchKubun order by date desc
+Result2.findAllOrderByCostASC=select e from Result2 e where (employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word%) and human_resource_or_work=:searchKubun order by cost asc
+Result2.findAllOrderByCostDESC=select e from Result2 e where (employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word%) and human_resource_or_work=:searchKubun order by cost desc
+Result2.findAllOrderByAgeASC=select e from Result2 e where (employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word%) and human_resource_or_work=:searchKubun order by age asc
+Result2.findAllOrderByAgeDESC=select e from Result2 e where (employment like %:word% or sender like %:word% or text like %:word% or closest_station like %:word%) and human_resource_or_work=:searchKubun order by age desc
+Result2.search=SELECT (e) FROM Result2 e WHERE (EMPLOYMENT LIKE %:sWord% OR SENDER LIKE %:sWord% OR TEXT LIKE %:sWord% OR CLOSEST_STATION LIKE %:sWord%) and human_resource_or_work=:searchKubun
+Result2.countAll=SELECT COUNT(e) FROM Result2 e WHERE (EMPLOYMENT LIKE %:sWord% OR SENDER LIKE %:sWord% OR TEXT LIKE %:sWord% OR CLOSEST_STATION LIKE %:sWord%) and human_resource_or_work=:searchKubun
